2019-06-13  Steven G. Kargl  <kargl@gcc.gnu.org>

PR fortran/68544
	* resolve.c (is_dt_name): New function to compare symbol name against
	list of derived types.
	(resolve_actual_arglist): Use it to find wrong code.

2019-06-13  Steven G. Kargl  <kargl@gcc.gnu.org>

	PR fortran/68544
	* gfortran.dg/pr68544.f90: New test.
	* gfortran.dg/pr85687.f90: Modify test for new error message.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@272259 138bc75d-0d04-0410-961f-82ee72b054a4